--- a/HeroCliq/Web.config
+++ b/HeroCliq/Web.config
@@ -9,7 +9,9 @@
   <connectionStrings>
     <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true"
       providerName="System.Data.SqlClient" />
-    <add name="HeroCliq_CliqsConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=E:\HeroCliq_Cliqs.mdf;Integrated Security=True;Connect Timeout=30;User Instance=True"
+    <add name="HeroCliq_CliqsConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\HeroCliq_Cliqs.mdf;Integrated Security=True;Connect Timeout=30;User Instance=True"
+      providerName="System.Data.SqlClient" />
+    <add name="HeroCliq_GamesConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\HeroCliq_Games.mdf;Integrated Security=True;Connect Timeout=30;User Instance=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
 
